<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="247dp"
        android:layout_height="88dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/rutgers_cafe"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuImage"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/orderDonutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        android:onClick="makeNewStage"
        android:text="@string/order_donuts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle" />

    <Button
        android:id="@+id/orderCoffeeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_toEndOf="@+id/mainMenuTitle"
        android:onClick="makeNewStage"
        android:text="@string/order_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/orderDonutButton"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle" />

    <Button
        android:id="@+id/storeOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="104dp"
        android:onClick="makeNewStage"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/currOrdersButton"
        app:layout_constraintTop_toBottomOf="@+id/orderCoffeeButton"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/currOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="64dp"
        android:onClick="makeNewStage"
        android:text="@string/current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDonutButton"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/mainMenuImage"
        android:layout_width="413dp"
        android:layout_height="246dp"
        android:contentDescription="@string/mainmenuimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src = "@drawable/donuts_bg"
        />
</android.support.constraint.ConstraintLayout>