<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrdersActivity">

    <TextView
        android:id="@+id/so_total_prompt"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/so_total"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/so_total_prompt" />

    <ImageView
        android:id="@+id/storeOrdersHeader"
        android:layout_width="418dp"
        android:layout_height="102dp"
        android:contentDescription="@string/storeordersheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/store_orders_btn" />

    <Button
        android:id="@+id/removeOrderBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:text="@string/remove_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersHeader" />

    <TextView
        android:id="@+id/orderNumberPrompt"
        android:layout_width="170dp"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:text="@string/order_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersHeader" />

    <Spinner
        android:id="@+id/orderNumSPIN"
        android:layout_width="162dp"
        android:layout_height="28dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/removeOrderBTN"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderNumberPrompt" />

    <TextView
        android:id="@+id/so_subtotal_prompt"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="212dp"
        android:text="@string/subtotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/so_tax"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/so_total"
        app:layout_constraintTop_toBottomOf="@+id/so_tax_prompt" />

    <TextView
        android:id="@+id/so_subtotal"
        android:layout_width="118dp"
        android:layout_height="26dp"
        app:layout_constraintEnd_toStartOf="@+id/so_tax"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/so_subtotal_prompt" />

    <TextView
        android:id="@+id/so_tax_prompt"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="2dp"
        android:text="@string/tax"
        app:layout_constraintEnd_toStartOf="@+id/so_total_prompt"
        app:layout_constraintTop_toTopOf="@+id/storeOrdersHeader" />

    <TextView
        android:id="@+id/orderDisplay"
        android:layout_width="395dp"
        android:layout_height="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>